#1661 Accés a expedients per permisos sobre unitats organitzatives (fase 2)

--- a/versions/3.3.2/1661.properties
+++ b/versions/3.3.2/1661.properties
@@ -7,3 +7,16 @@ app.procediments.plugin.class=net.conselldemallorca.helium.integracio.plugins.pr
 app.plugins.procediments.rolsac.service.url=https://dev.caib.es/rolsac/api/rest/v1/procedimientos
 app.plugins.procediments.rolsac.service.username=$distribucio_rolsac
 app.plugins.procediments.rolsac.service.password=distribucio_rolsac
+
+####
+# Integració amb unitats orgàniques Dir3
+####
+es.caib.helium.plugin.unitats.organitzatives.class=net.conselldemallorca.helium.integracio.plugins.unitat.UnitatsOrganiquesPluginDir3
+es.caib.helium.plugin.unitats.organitzatives.dir3.service.url=https://dev.caib.es/dir3caib/rest/unidades/
+es.caib.helium.plugin.unitats.organitzatives.dir3.service.username=$distribucio_dir3caib
+es.caib.helium.plugin.unitats.organitzatives.dir3.service.password=distribucio_dir3caib
+es.caib.helium.plugin.unitats.organitzatives.dir3.connect.timeout=300000
+es.caib.helium.plugin.unitats.organitzatives.dir3.request.timeout=300000
+es.caib.helium.plugin.unitats.organitzatives.dir3.service.log.actiu=false
+es.caib.helium.plugin.unitats.cerca.dir3.service.url=https://dev.caib.es/dir3caib/rest/busqueda/organismos
+es.caib.helium.APB.plugin.unitats.organitzatives.dir3.service.url=https://abp.caib.es/dir3caib/rest/unidades/
