#1661 Accés a expedients per permisos sobre unitats organitzatives
- Fase 2: Canviar els permisos dels tipus d'expedient per a que quan
siguin de
procediments comuns s'hagi d'especificar un òrgan gestor

--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -14,6 +14,12 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>es.caib</groupId>
 			<artifactId>signaturacaib</artifactId>
 			<version>3.1.0</version>
