--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<slf4j.version>1.5.8</slf4j.version>
 		<jackson.version>2.6.3</jackson.version>
 		<regweb3.version>3.1.2</regweb3.version>
+		<lombok.version>1.18.24</lombok.version>
 	</properties>
 	<modules>
 		<module>helium-core-api</module>
