--- a/versions/3.3.2/1661.properties
+++ b/versions/3.3.2/1661.properties
@@ -4,12 +4,12 @@
 ## Intregraci√≥ amb el plugin de procediments per sincronitzar els procediments amb Rolsac  #
 ########################################################################################## #
 app.procediments.plugin.class=net.conselldemallorca.helium.integracio.plugins.procediment.ProcedimentPluginRolsac
-app.plugins.procediments.rolsac.service.url=https://dev.caib.es/rolsac/api/rest/v1/procedimientos
+app.plugins.procediments.rolsac.service.url=https://dev.caib.es/rolsac/api/rest/v1
 app.plugins.procediments.rolsac.service.username=$distribucio_rolsac
 app.plugins.procediments.rolsac.service.password=distribucio_rolsac
 
 ####
-# IntegraciÛ amb unitats org‡niques Dir3
+# Integraci√≥ amb unitats org√†niques Dir3
 ####
 es.caib.helium.plugin.unitats.organitzatives.class=net.conselldemallorca.helium.integracio.plugins.unitat.UnitatsOrganiquesPluginDir3
 es.caib.helium.plugin.unitats.organitzatives.dir3.service.url=https://dev.caib.es/dir3caib/rest/unidades/
