#1661 Accés a expedient per permisos sobre UO's
- Arreglar propietats plugin dir3

--- a/versions/3.3.2/1661.properties
+++ b/versions/3.3.2/1661.properties
@@ -11,12 +11,22 @@ app.plugins.procediments.rolsac.service.password=distribucio_rolsac
 ####
 # Integració amb unitats orgàniques Dir3
 ####
-es.caib.helium.plugin.unitats.organitzatives.class=net.conselldemallorca.helium.integracio.plugins.unitat.UnitatsOrganiquesPluginDir3
-es.caib.helium.plugin.unitats.organitzatives.dir3.service.url=https://dev.caib.es/dir3caib/rest/unidades/
-es.caib.helium.plugin.unitats.organitzatives.dir3.service.username=$distribucio_dir3caib
-es.caib.helium.plugin.unitats.organitzatives.dir3.service.password=distribucio_dir3caib
-es.caib.helium.plugin.unitats.organitzatives.dir3.connect.timeout=300000
-es.caib.helium.plugin.unitats.organitzatives.dir3.request.timeout=300000
-es.caib.helium.plugin.unitats.organitzatives.dir3.service.log.actiu=false
-es.caib.helium.plugin.unitats.cerca.dir3.service.url=https://dev.caib.es/dir3caib/rest/busqueda/organismos
-es.caib.helium.APB.plugin.unitats.organitzatives.dir3.service.url=https://abp.caib.es/dir3caib/rest/unidades/
+
+## ESBORRAR
+
+#app.unitats.organiques.dir3.plugin.service.class=net.conselldemallorca.helium.integracio.plugins.unitat.UnitatsOrganiquesPluginDir3
+#app.unitats.organiques.dir3.plugin.service.url=http://dev.caib.es/dir3caib/ws/Dir3CaibObtenerUnidades
+#app.unitats.organiques.dir3.plugin.service.username=$ripea_dir3caib
+#app.unitats.organiques.dir3.plugin.service.password=ripea_dir3caib
+#app.unitats.organiques.dir3.plugin.service.log.actiu=false
+#app.unitats.organiques.dir3.plugin.service.timeout=120
+
+# AFEGIR
+app.unitats.organiques.dir3.plugin.service.class=net.conselldemallorca.helium.integracio.plugins.unitat.UnitatsOrganiquesPluginDir3
+app.unitats.organiques.dir3.plugin.service.url=https://dev.caib.es/dir3caib/rest/unidades/
+app.unitats.organiques.dir3.plugin.service.username=$distribucio_dir3caib
+app.unitats.organiques.dir3.plugin.service.password=distribucio_dir3caib
+app.unitats.organiques.dir3.plugin.service.connect.timeout=300000
+app.unitats.organiques.dir3.plugin.service.request.timeout=300000
+app.unitats.organiques.dir3.plugin.service.log.actiu=false
+app.unitats.organiques.dir3.plugin.service.cerca.url=https://dev.caib.es/dir3caib/rest/busqueda/organismos
