1656 Error amb els controls tipus suggest

--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,10 @@
 		<module>helium-ear</module>
 		<module>helium-applet</module>
 		<module>helium-hibernate-entitymanager</module>
-		<module>helium-selenium</module>
+		<!-- <module>helium-selenium</module>
 		<module>helium-selenium-v26</module>
 		<module>helium-selenium-integraciones</module>
-		<module>helium-selenium-webapp</module>
+		<module>helium-selenium-webapp</module> -->
 		<module>helium-ws-client</module>
 	</modules>
 	<build>
