--- a/versions/3.3.2/1661.properties
+++ b/versions/3.3.2/1661.properties
@@ -1,7 +1,7 @@
-#1661 Acc√©s a expedients per permisos sobre unitats organitzatives
+#1661 AccÈs a expedients per permisos sobre unitats organitzatives
 
 ########################################################################################## #
-## Intregraci√≥ amb el plugin de procediments per sincronitzar els procediments amb Rolsac  #
+## IntregraciÛ amb el plugin de procediments per sincronitzar els procediments amb Rolsac  #
 ########################################################################################## #
 app.procediments.plugin.class=net.conselldemallorca.helium.integracio.plugins.procediment.ProcedimentPluginRolsac
 app.plugins.procediments.rolsac.service.url=https://dev.caib.es/rolsac/api/rest/v1
@@ -9,7 +9,7 @@ app.plugins.procediments.rolsac.service.username=$distribucio_rolsac
 app.plugins.procediments.rolsac.service.password=distribucio_rolsac
 
 ####
-# Integraci√≥ amb unitats org√†niques Dir3
+# IntegraciÛ amb unitats org‡niques Dir3
 ####
 
 ## ESBORRAR
