Tancament i correccions Helium 3.3.2 (2024.02.28 13:00)
- Corregir consulta domini intern #1661

--- a/versions/3.3.2/1661.properties
+++ b/versions/3.3.2/1661.properties
@@ -1,7 +1,7 @@
-#1661 AccÈs a expedients per permisos sobre unitats organitzatives
+#1661 Acc√©s a expedients per permisos sobre unitats organitzatives
 
 ########################################################################################## #
-## IntregraciÛ amb el plugin de procediments per sincronitzar els procediments amb Rolsac  #
+## Intregraci√≥ amb el plugin de procediments per sincronitzar els procediments amb Rolsac  #
 ########################################################################################## #
 app.procediments.plugin.class=net.conselldemallorca.helium.integracio.plugins.procediment.ProcedimentPluginRolsac
 app.plugins.procediments.rolsac.service.url=https://dev.caib.es/rolsac/api/rest/v1
@@ -9,7 +9,7 @@ app.plugins.procediments.rolsac.service.username=$distribucio_rolsac
 app.plugins.procediments.rolsac.service.password=distribucio_rolsac
 
 ####
-# IntegraciÛ amb unitats org‡niques Dir3
+# Integraci√≥ amb unitats org√†niques Dir3
 ####
 
 ## ESBORRAR
@@ -29,4 +29,3 @@ app.unitats.organiques.dir3.plugin.service.password=distribucio_dir3caib
 app.unitats.organiques.dir3.plugin.service.connect.timeout=300000
 app.unitats.organiques.dir3.plugin.service.request.timeout=300000
 app.unitats.organiques.dir3.plugin.service.log.actiu=false
-app.unitats.organiques.dir3.plugin.service.cerca.url=https://dev.caib.es/dir3caib/rest/busqueda/organismos
