--- a/helium-core-common/pom.xml
+++ b/helium-core-common/pom.xml
@@ -174,6 +174,11 @@
 			<version>${commons-lang.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
 			<groupId>com.artofsolving</groupId>
 			<artifactId>jodconverter</artifactId>
 			<version>2.2.1</version>
