--- a/versions/3.3.3/1754.properties
+++ b/versions/3.3.3/1754.properties
@@ -1,1 +1,3 @@
-app.massiu.unitats.procediments.sync=0 29 15 * * *
+--#1754 Tasca programada per sincronitzar unitats i procediments automàticament
+
+app.unitats.procediments.sync=0 29 15 * * *
