--- a/doc/resources/properties/global.properties
+++ b/doc/resources/properties/global.properties
@@ -241,3 +241,6 @@ net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.url=https://dev
 # Usuari amb el rol DIS_BACKWS
 net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.username=usuari
 net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.password=******
+
+# Tasca programada per sincronitzar unitats i procediments
+app.unitats.procediments.sync=0 29 15 * * *
