--- a/doc/resources/properties/global.properties
+++ b/doc/resources/properties/global.properties
@@ -242,5 +242,13 @@ net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.url=https://dev
 net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.username=usuari
 net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.password=******
 
+
 # Tasca programada per sincronitzar unitats i procediments
 app.unitats.procediments.sync=0 29 15 * * *
+
+# ###
+# Plugin de dades externes
+# ###
+
+app.dadesext.dir3.plugin.service.class=net.conselldemallorca.helium.integracio.plugins.dadesext.DadesExternesPluginDir3
+app.dadesext.dir3.plugin.service.url=https://dev.caib.es/dir3caib/ws/Dir3CaibObtenerCatalogos
