--- a/helium-disseny/pom.xml
+++ b/helium-disseny/pom.xml
@@ -7,6 +7,7 @@
 		<version>3.3</version>
 	</parent>
 	<artifactId>helium-disseny</artifactId>
+	<version>3.3.5</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 <!--		<java.version>1.7</java.version>-->
