--- a/doc/resources/properties/global.properties
+++ b/doc/resources/properties/global.properties
@@ -252,3 +252,5 @@ app.unitats.procediments.sync=0 29 15 * * *
 
 app.dadesext.dir3.plugin.service.class=net.conselldemallorca.helium.integracio.plugins.dadesext.DadesExternesPluginDir3
 app.dadesext.dir3.plugin.service.url=https://dev.caib.es/dir3caib/ws/Dir3CaibObtenerCatalogos
+app.dadesext.dir3.plugin.service.url.username=$helium_dir3caib
+app.dadesext.dir3.plugin.service.url.password=****
