--- a/doc/resources/properties/updates/helium_update_3.3.5.properties
+++ b/doc/resources/properties/updates/helium_update_3.3.5.properties
@@ -10,3 +10,5 @@
 # ###
 app.dadesext.dir3.plugin.service.class=net.conselldemallorca.helium.integracio.plugins.dadesext.DadesExternesPluginDir3
 app.dadesext.dir3.plugin.service.url=https://dev.caib.es/dir3caib/ws/Dir3CaibObtenerCatalogos
+app.dadesext.dir3.plugin.service.url.username=$helium_dir3caib
+app.dadesext.dir3.plugin.service.url.password=****
