--- a/doc/resources/properties/global.properties
+++ b/doc/resources/properties/global.properties
@@ -173,6 +173,7 @@ app.custodia.plugin.caib.password=HELIUM
 #app.persones.plugin.jdbc.jndi.parameter=java:comp/env/jdbc/HeliumDS
 #app.persones.plugin.jdbc.filter.code=select codi, nom, llinatges, dni, email from hel_persona where codi = :codi
 #app.persones.plugin.jdbc.filter.name=select codi, nom, llinatges, dni, email from hel_persona where upper(nom_sencer) like upper('%'||:nom||'%')
+#app.persones.plugin.jdbc.filter.grup=select usu_codi, usu_nom, usu_nif, usu_codi ||'@caib.es' from sc_wl_usuari u, sc_wl_usugru g where g.ugr_codgru=:grup and g.ugr_codusu=u.usu_codi
 
 # ###
 # Integració amb el servei de portasignatures
@@ -254,3 +255,12 @@ app.dadesext.dir3.plugin.service.class=net.conselldemallorca.helium.integracio.p
 app.dadesext.dir3.plugin.service.url=https://dev.caib.es/dir3caib/ws/Dir3CaibObtenerCatalogos
 app.dadesext.dir3.plugin.service.url.username=$helium_dir3caib
 app.dadesext.dir3.plugin.service.url.password=****
+
+
+# ###
+# Hora en què s'enviaràn els emails agrupats d'anotacions a l'usuari
+# ###
+app.anotacions.emails.agrupats.cron=0 0 20 * * *
+
+# Per indicar quin és l'entonr per diferenciar-lo en l'enviament de correus, només pels entorns previs DEV, PRE i SE
+app.entorn.helium=DES
