--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -439,6 +439,17 @@
 					<version>1.12.0</version>
 				</dependency>
 				<dependency>
+					<groupId>org.webjars</groupId>
+					<artifactId>jquery-ui</artifactId>
+					<version>1.12.0</version>
+					<exclusions>
+						<exclusion>
+							<artifactId>jquery</artifactId>
+							<groupId>org.webjars</groupId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+				<dependency>
 					<groupId>org.webjars.bower</groupId>
 					<artifactId>bootstrap</artifactId>
 					<version>3.3.6</version>
