--- a/helium-core/pom.xml
+++ b/helium-core/pom.xml
@@ -102,6 +102,11 @@
 			<artifactId>guava</artifactId>
 			<version>20.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hyperic</groupId>
+			<artifactId>sigar</artifactId>
+			<version>1.6.5.132</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
